--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon(1).ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Arineh Nazaryan - Sociology </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ArinehNazaryan.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,14 +58,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Arineh Nazaryan
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">Working on my undergrad bachelor of science degree in Sociology. Im planning on graduating this Spring, Spring of 2020.   <br><br>
 
-        Enter bio here<br><br>
+        My future plans are to get into UCLA's master's program. <br><br>
 
-        Enter bio here
+        With my degrees  hope to find a job and help poeple. 
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
@@ -74,10 +74,10 @@
           <a target="_blank" href="https://github.com">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" href="https://">
+            <i class=""></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:ArinehNazaryan@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -86,18 +86,19 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience" >
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Experience  </h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Office Management </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">BMW Motors</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • book keeping <br> 
+              •Experience with HTML, CSS, Javascript, Photoshop  <br>
+              • Customer Service 
+              <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -111,7 +112,7 @@
             <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Stocking items <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,18 +123,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Baby Sitting</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">los Angeles </a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped the kids with homework<br>
+            • Made lunch and dinner for the kids <br>
+            • interacted with them by playing games, reading or wathcing TV<br>
+            • Helped around the house <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">May2017 - June 2018</span>
           </div>
         </div>
 
@@ -152,19 +153,19 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachlors of Science in Sociology </div>
+            <div>Bs in Sociology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - Spring 2002</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in biology</div>
+            <div>Lab assistant </div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017</span>
@@ -174,11 +175,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Department of Sociology</div>
+            <div>Student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2018 - June 2019</span>
           </div>
         </div>
 
@@ -191,7 +192,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Pic3.jpeg" width="500px">
+            <img src="img/Pic4.jpeg" width="500px">
+            <img src="img/Pic2.png"  width="500px">
+            <img src= "img/Pic1.jpg" width="500px">
         </center>
       </div>
     </section>
